plugins {
    id 'java'
}

group 'de.janno'
version '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

dependencies {
    implementation "io.projectreactor:reactor-core:3.4.17"
    implementation 'com.google.guava:guava:31.1-jre'

    compileOnly 'org.projectlombok:lombok:1.18.22'
    annotationProcessor 'org.projectlombok:lombok:1.18.22'

    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
}

java {
    toolchain {
        languageVersion.set(JavaLanguageVersion.of(18))
    }
}

test {
    useJUnitPlatform()
}